plugins {
	id 'java'
}

// https://github.com/gradle/gradle/issues/13481
sourceCompatibility = 16
targetCompatibility = 16

repositories {
	mavenCentral()
}

dependencies {
	// for writing tests "testCompile" would suffice, but extensions are
	// defined in the project's "main" folder, so we need "compile"
	compile "org.openjfx:javafx-controls:11"
}

compileJava {
	options.compilerArgs += ["--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED", "--enable-preview"]
}
